# cam_record_sim

./: .gitignore  BUILD.md  Cargo.toml  QUICK_START.md  README.md  README_FIRST.txt  build-all.sh  build-appimage.sh  build-flatpak.sh  build.sh  install-dependencies.sh  run.sh  test-camera.sh  todo.md
packaging/: cam_record_sim.appdata.xml  cam_record_sim.desktop  com.github.fasttube.CamRecordSim.yml  icon.png.txt
src/: camera.rs  dual_recorder.rs  gst_camera.rs  gui.rs  main.rs  playback_camera.rs  player.rs  recorder.rs  virtual_camera.rs
