[package]
name = "cam_record_sim"
version = "0.1.0"
edition = "2024"

[dependencies]
nokhwa = { version = "0.10", features = ["input-native"] }
gstreamer = "0.23"
gstreamer-video = "0.23"
gstreamer-app = "0.23"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
ctrlc = "3.4"
gtk4 = "0.9"
glib = "0.20"
async-channel = "2.3"
image = "0.25"
